@@ -25,6 +25,8 @@ dpkg (1.17.7) UNRELEASED; urgency=low
     Closes: #735975
   * Do not generate perl warnings on undef versions in
     Dpkg::Deps::deps_compare(). See: #737731
+  * Clarify dpkg-genchanges error message on binary builds without any binary
+    artifact built. Closes: #726520
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
